# HackingProject

./: .gitignore  README.md  launch_demo.sh  pyproject.toml  run_cli.py  run_web.py
labs/local_ctf/: README.md  collector.py  generate_demo_assets.py  scanner.py  start_hosts.py
labs/local_ctf/host_assets/alpha/: index.html
labs/local_ctf/host_assets/archive/: index.html
labs/local_ctf/host_assets/beta/: index.html
labs/local_ctf/host_assets/gamma/: index.html
labs/mininet_ctf/: README.md  collector.py  generate_demo_assets.py  topology.py
labs/mininet_ctf/host_assets/alpha/: index.html
labs/mininet_ctf/host_assets/archive/: index.html
labs/mininet_ctf/host_assets/beta/: index.html
labs/mininet_ctf/host_assets/gamma/: index.html
src/metadata_risk_analyzer/: __init__.py  analyzer.py  cli.py  correlate.py  demo_data.py  extractors.py  fingerprint.py  forensics.py  geocoder.py  models.py  reporting.py  spoofer.py  web.py
src/metadata_risk_analyzer/static/: styles.css
src/metadata_risk_analyzer/templates/: index.html
tests/: test_analyzer.py
