[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-risk-analyzer"
version = "0.1.0"
description = "A simple Python tool that extracts image metadata and scores privacy risk."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "Pillow>=10.0.0",
  "piexif>=1.1.3",
]

[project.scripts]
metadata-risk-analyzer = "metadata_risk_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
